# k8s-wait-full

./: Cargo.toml  README.md
src/: main.rs  pod.yaml
